--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -191,7 +191,8 @@ header h2 {
   font: bold italic 1em/1.5 Georgia, Times, “Times New Roman”, serif;
   color: #e69b95;
   padding-bottom: 14px;
-  margin-top: 3px;
+  padding-top:5;
+  margin-top: -3px;
   text-align: center;
 }
 
